# discord-bot

./: .gitlab-ci.yml  Dockerfile  README.md  addcolors.py  bot.py  colors.json  flask_app.py  pyproject.toml  requirements.txt  start.sh  test_discord.py  test_request.py
.github/workflows/: pipeline.yml
resources/: copypastas.yml  links.yml
src/: bot.py
