[tool.poetry]
name = "discord-bot"
version = "1.0.0"
description = "A discord bot for async practice"
authors = ["Trevor Leibert <tleibert1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncpraw = "^7.3.1"
"discord.py" = "^1.7.3"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
